--- a/app/src/main/res/layout/add_rodent.xml
+++ b/app/src/main/res/layout/add_rodent.xml
@@ -69,7 +69,7 @@
                     android:elevation="32dp"
                     android:gravity="center"
 
-                    app:cardBackgroundColor="#FFFFFF"
+                    app:cardBackgroundColor="#5397DF"
                     app:cardCornerRadius="60dp">
 
 
