--- a/app/src/main/res/layout/weight_list.xml
+++ b/app/src/main/res/layout/weight_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#ACC5E1"
-    tools:context="com.gryzoniopedia.rodentshelper.ROOM.Rodent.AddEditRodents">
+    tools:context="com.gryzoniopedia.rodentshelper.ROOM.Rodent.Methods.AddEditRodents">
 
     <LinearLayout
         android:layout_width="match_parent"
