--- a/app/src/main/res/layout/treats_cagesupply.xml
+++ b/app/src/main/res/layout/treats_cagesupply.xml
@@ -123,7 +123,9 @@
                             android:id="@+id/linearLayout_encyclopedia"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
                             android:layout_marginEnd="10dp"
+                            android:layout_marginBottom="10dp"
                             android:background="#fce1a7"
                             android:gravity="center"
                             android:orientation="horizontal"
