--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,7 +101,7 @@
                             android:layout_marginTop="20dp"
                             android:layout_marginEnd="10dp"
                             android:backgroundTint="#014D70"
-                            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890!@#$%^&amp;*-+=,./?;'\|"
+                            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890!@#$%^&amp;./"
                             android:drawableStart="@drawable/ic_login"
                             android:drawablePadding="10dp"
                             android:drawableTint="#014D70"
