--- a/app/src/main/res/layout/activity_view_recycler_rodents.xml
+++ b/app/src/main/res/layout/activity_view_recycler_rodents.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerlayout"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
+
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ACC5E1"
@@ -73,7 +82,7 @@
         android:gravity="center"
 
         app:cardBackgroundColor="#ACC5E1"
-        app:cardCornerRadius="32dp"
+        app:cardCornerRadius="32.5dp"
 
         app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,3 +103,23 @@
             app:strokeColor="#0375a8" />
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView_rodents"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:menu="@menu/activity_main_drawer"
+        app:headerLayout="@layout/drawer_header"
+        android:layout_gravity="start"
+        android:background="#ACC5E1"
+
+        app:itemTextAppearance="?android:attr/textAppearanceMedium"
+        app:theme="@style/NavigationTheme"
+        app:itemTextColor="#014D70"
+        app:itemVerticalPadding="22sp"
+        app:itemBackground="@drawable/drawer_layer"
+
+        ></com.google.android.material.navigation.NavigationView>
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
