--- a/app/src/main/res/layout/activity_weight.xml
+++ b/app/src/main/res/layout/activity_weight.xml
@@ -69,7 +69,7 @@
                             android:layout_marginRight="20dp"
                             android:gravity="center"
                             android:maxLines="6"
-                            android:text="&lt; potrzeba minimum dwóch pomiarów wagi, wpisanych do aplikacji, żeby wyświetlić graficzny wykres &gt;"
+                            android:text="Potrzeba minimum dwóch pomiarów wagi, wpisanych do aplikacji, żeby wyświetlić graficzny wykres."
                             android:textColor="#014D70"
                             android:textColorHint="#77147A"
                             android:textSize="20sp"
@@ -141,7 +141,7 @@
                             android:layout_marginLeft="20dp"
                             android:layout_marginRight="20dp"
                             android:maxLines="6"
-                            android:text="&lt; Informacje o prawidłowej wadze wyświetlą się w momencie dodania pierwszego pomiaru &gt;"
+                            android:text="Informacje o prawidłowej wadze wyświetlą się w momencie dodania pierwszego pomiaru"
                             android:textColor="#014D70"
                             android:textColorHint="#77147A"
                             android:textSize="16sp" />
