--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -104,7 +104,13 @@
     </style>
 
 
+    <style name="NavigationTheme" parent="Theme.AppCompat.Light">
+        <item name="android:textSize">26sp</item>
 
+        <item  name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+
+    </style>
 
 
 </resources>
