--- a/app/src/main/res/layout/btn_start_settings.xml
+++ b/app/src/main/res/layout/btn_start_settings.xml
@@ -20,79 +20,103 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <RadioGroup
-                android:id="@+id/radioGroupStartup_rodents"
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="15dp"
+                android:text="Ustawienia uruchamiania"
+                android:textColor="#014D70"
+                android:textColorHint="#77147A"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioButton
+
+                    android:id="@+id/radioButtonPets_rodents"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_marginStart="20dp"
+                    android:buttonTint="#0375a8"
+
+                    android:text="Ekran &quot;Pupile&quot;"
+                    android:textColor="#014D70" />
+
+                <ImageButton
+                    android:id="@+id/imageButtonRodentSetting"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="5dp"
-                    android:text="Ustawienia uruchamiania"
-                    android:textColor="#014D70"
-                    android:textColorHint="#77147A"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:background="@drawable/roundbutton_small"
+                    android:padding="5dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_chinchilla"
+                    app:tint="#0A4A97" />
+            </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
 
-                    <RadioButton
+                <RadioButton
 
-                        android:id="@+id/radioButtonPets_rodents"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:buttonTint="#0375a8"
-                        android:text="Ekran &quot;Pupile&quot;"
-                        android:textColor="#014D70" />
+                    android:id="@+id/radioButtonEncyclopedia_rodents"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:buttonTint="#0375a8"
+                    android:text="Ekran &quot;Encyklopedia&quot;"
+                    android:textColor="#014D70" />
 
-                    <ImageButton
+                <ImageButton
 
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
-                        android:layout_marginStart="10dp"
-                        android:background="@drawable/roundbutton_small"
-                        android:padding="5dp"
-                        android:scaleType="centerInside"
-                        android:src="@drawable/ic_chinchilla"
-                        app:tint="#0A4A97" />
-                </LinearLayout>
+                    android:id="@+id/imageButtonEncyclopediaSetting"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_marginStart="10dp"
+                    android:background="@drawable/roundbutton_small"
+                    android:padding="5dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_encyclopedia"
+                    app:tint="#0A4A97" />
+            </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
 
-                    <RadioButton
+                <RadioButton
 
-                        android:id="@+id/radioButtonEncyclopedia_rodents"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:buttonTint="#0375a8"
-                        android:text="Ekran &quot;Encyklopedia&quot;"
-                        android:textColor="#014D70" />
+                    android:id="@+id/radioButtonMap_rodents"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:buttonTint="#0375a8"
+                    android:text="Ekran &quot;Mapa weterynarzy&quot;"
+                    android:textColor="#014D70" />
 
-                    <ImageButton
+                <ImageButton
 
-                        android:id="@+id/imageButton"
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
-                        android:layout_marginStart="10dp"
-                        android:background="@drawable/roundbutton_small"
-                        android:padding="5dp"
-                        android:scaleType="centerInside"
-                        android:src="@drawable/ic_encyclopedia"
-                        app:tint="#0A4A97" />
-                </LinearLayout>
-
-            </RadioGroup>
+                    android:id="@+id/imageButtonMapSetting"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_marginStart="10dp"
+                    android:background="@drawable/roundbutton_small"
+                    android:padding="7dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_location"
+                    app:tint="#0A4A97" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -107,7 +131,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
                     android:gravity="center"
-                    android:text="Możesz ustawić, które okienko wyświetli się jako pierwsze, po uruchomieniu aplikacji."
+                    android:text="Opcja pozwala zadecydować, który ekran zostanie wyświetlony jako pierwszy po każdorazowym uruchomieniu aplikacji."
                     android:textColor="#014D70"
                     android:textSize="12sp" />
 
