--- a/app/src/main/res/layout/custom_dialog_notes.xml
+++ b/app/src/main/res/layout/custom_dialog_notes.xml
@@ -3,117 +3,135 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#5397DF"
-    android:orientation="vertical"
-    android:padding="15dp">
+    android:background="@android:color/transparent"
+    android:orientation="vertical">
 
-    <RadioGroup
-        android:id="@+id/radioGroupDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
-            android:text="Sortuj według daty dodania:"
-            android:textColor="#014D70"
-            android:textColorHint="#77147A"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <RadioButton
-            android:id="@+id/radioButtonDate1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:buttonTint="#0375a8"
-            android:text="Malejąco"
-            android:textColor="#014D70" />
-
-        <RadioButton
-            android:id="@+id/radioButtonDate2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:buttonTint="#0375a8"
-            android:text="Rosnąco"
-            android:textColor="#014D70" />
-    </RadioGroup>
-
-    <View
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="10dp"
-        android:background="#FFFFFF" />
+        android:layout_height="wrap_content"
+        android:elevation="20dp"
+        app:cardBackgroundColor="#5397DF"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="0dp">
 
-    <RadioGroup
-        android:id="@+id/radioGroupDisplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
-            android:text="Wyświetlane notatki:"
-            android:textColor="#014D70"
-            android:textColorHint="#77147A"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:orientation="vertical">
 
-        <RadioButton
-            android:id="@+id/radioButtonAll"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:buttonTint="#0375a8"
-            android:text="Wyświetl wszystko"
-            android:textColor="#014D70" />
+            <RadioGroup
+                android:id="@+id/radioGroupDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp">
 
-        <RadioButton
-            android:id="@+id/radioButton1Month"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:buttonTint="#0375a8"
-            android:text="Ostatni miesiąc"
-            android:textColor="#014D70" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:text="Sortuj według daty dodania:"
+                    android:textColor="#014D70"
+                    android:textColorHint="#77147A"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
-        <RadioButton
-            android:id="@+id/radioButton3Months"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:buttonTint="#0375a8"
-            android:text="Ostatnie 3 miesiące"
-            android:textColor="#014D70" />
+                <RadioButton
+                    android:id="@+id/radioButtonDate1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:buttonTint="#0375a8"
+                    android:text="Malejąco"
+                    android:textColor="#014D70" />
 
-        <RadioButton
-            android:id="@+id/radioButton6Months"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:buttonTint="#0375a8"
-            android:text="Ostatnie pół roku"
-            android:textColor="#014D70" />
+                <RadioButton
+                    android:id="@+id/radioButtonDate2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:buttonTint="#0375a8"
+                    android:text="Rosnąco"
+                    android:textColor="#014D70" />
+            </RadioGroup>
 
-        <RadioButton
-            android:id="@+id/radioButton1Year"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:buttonTint="#0375a8"
-            android:text="Ostatni rok"
-            android:textColor="#014D70" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="10dp"
+                android:background="#FFFFFF" />
 
-    </RadioGroup>
+            <RadioGroup
+                android:id="@+id/radioGroupDisplay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:text="Wyświetlane notatki:"
+                    android:textColor="#014D70"
+                    android:textColorHint="#77147A"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <RadioButton
+                    android:id="@+id/radioButtonAll"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:buttonTint="#0375a8"
+                    android:text="Wyświetl wszystko"
+                    android:textColor="#014D70" />
+
+                <RadioButton
+                    android:id="@+id/radioButton1Month"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:buttonTint="#0375a8"
+                    android:text="Ostatni miesiąc"
+                    android:textColor="#014D70" />
+
+                <RadioButton
+                    android:id="@+id/radioButton3Months"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:buttonTint="#0375a8"
+                    android:text="Ostatnie 3 miesiące"
+                    android:textColor="#014D70" />
+
+                <RadioButton
+                    android:id="@+id/radioButton6Months"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:buttonTint="#0375a8"
+                    android:text="Ostatnie pół roku"
+                    android:textColor="#014D70" />
+
+                <RadioButton
+                    android:id="@+id/radioButton1Year"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:buttonTint="#0375a8"
+                    android:text="Ostatni rok"
+                    android:textColor="#014D70" />
+
+            </RadioGroup>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
