--- a/app/src/main/res/layout/app_bar_rodents.xml
+++ b/app/src/main/res/layout/app_bar_rodents.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-
+    android:background="@drawable/toolbar_test"
     app:theme="@style/CustomToolbar"
     app:popupTheme="@style/CustomPopupToolbar">
 
@@ -13,8 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
+        android:background="@android:color/transparent"
         android:text="Twoje pupile"
         android:textColor="#FFFFFF"
-        android:textSize="22sp" />
+        android:textSize="21sp" />
 
 </androidx.appcompat.widget.Toolbar>
