--- a/app/src/debug/res/drawable/app_bg.xml
+++ b/app/src/debug/res/drawable/app_bg.xml
@@ -1,12 +1,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="270"
+        android:angle="135"
 
 
-        android:centerColor="#5397DF"
+        android:centerColor="#cad8e8"
         android:endColor="#ACC5E1"
-        android:startColor="#048FCD"
+        android:startColor="#e1e8f0"
 
         android:type="linear" />
 </shape>
