--- a/app/src/main/res/layout/treats_cagesupply.xml
+++ b/app/src/main/res/layout/treats_cagesupply.xml
@@ -19,6 +19,7 @@
             android:id="@+id/toolbar_main"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:background="@drawable/toolbar_test"
             app:popupTheme="@style/CustomPopupToolbar"
             app:theme="@style/CustomToolbarAdditional"
             app:titleTextAppearance="@style/Toolbar.TitleText">
@@ -140,7 +141,7 @@
                                 android:gravity="center"
                                 app:cardBackgroundColor="#FFFFFF"
                                 app:cardCornerRadius="20dp"
-                                app:cardElevation="5dp">
+                                app:cardElevation="0dp">
 
 
                                 <ImageView
