--- a/app/src/main/res/layout/bottom_navbar.xml
+++ b/app/src/main/res/layout/bottom_navbar.xml
@@ -22,7 +22,7 @@
         android:layout_marginBottom="0dp"
         android:layout_weight="1"
         android:adjustViewBounds="true"
-        android:background="@drawable/rounded_navbar_test"
+        android:background="@drawable/rounded_navbar"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="5dp"
